--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "browserify-zlib": "^0.2.0",
+    "http-proxy-middleware": "^3.0.3",
     "https-browserify": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -48,6 +49,5 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
