--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3"
+    "typescript": "4.9.5"
   }
 }
